--- a/model_training.ipynb
+++ b/model_training.ipynb
@@ -107,6 +107,14 @@
   },
   {
    "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "ecbb696fc110211c"
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "## Preprocessing function"
    ],
